fixing scrollbar

--- a/styles.css
+++ b/styles.css
@@ -352,10 +352,10 @@ footer {
 
 /* PROJECTS PAGE */
 .projects-wrapper {
-  margin: 40px;
   flex-grow: 1;
   overflow-y: auto;
   max-height: calc(100vh - 150px);
+  margin: 40px 0;
 }
 
 .projects-container {
@@ -363,7 +363,7 @@ footer {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   align-items: start;
-  padding-right: 10px;
+  padding: 0 40px;
 }
 
 .projects-container::-webkit-scrollbar {
